--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-task-loader-recursive",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Easily organize gulp tasks in separate files and folders",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "gulp",
+    "gulpplugin",
     "task",
     "loader",
     "recursive"
